// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloStarWarsHooks ComponentDidMount Handles an error in the web request correctly 1`] = `
<DocumentFragment>
  <h1>
    Hello !dlroW... Oh dear, something went wrong!
  </h1>
</DocumentFragment>
`;

exports[`HelloStarWarsHooks ComponentDidMount Obtains result and sets data correctly 1`] = `
<DocumentFragment>
  <h1>
    Hello Jedi Master!
  </h1>
</DocumentFragment>
`;

exports[`HelloStarWarsHooks Renders with a place holder 1`] = `
<DocumentFragment>
  <h1>
    Hello ...!
  </h1>
</DocumentFragment>
`;
